--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.6",
     "multer": "^1.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
