--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.5.4",
     "express-session": "^1.15.6",
