--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.15.6",
     "mongoose": "^5.1.6",
     "multer": "^1.3.0",
+    "ngx-quill-editor": "^2.2.2",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rxjs": "^6.0.0",
